[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/bubble.png" type="Texture" id=1]
[ext_resource path="res://bullet_bounce.gd" type="Script" id=2]
[ext_resource path="res://assets/tri.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.5

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.451852, 1 )
colors = PoolColorArray( 1, 0.94902, 0, 1, 1, 0.219608, 0.219608, 1, 0.239216, 0.239216, 0.239216, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1200.0
initial_velocity_random = 0.8
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 200.0
angle = 720.0
angle_random = 1.0
scale = 0.2
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 150.0

[node name="bullet" type="RigidBody2D"]
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 2.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.980392, 0.396078, 1 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 6 )

[node name="fuse" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="fuse" to="." method="_on_fuse_timeout"]
